WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158296
[Win] Fetch API tests are failing.
https://bugs.webkit.org/show_bug.cgi?id=158296
Summary
[Win] Fetch API tests are failing.
Per Arne Vollan
Reported
2016-06-02 00:58:25 PDT
We also need to enable this feature in runtime.
Attachments
Patch
(1.35 KB, patch)
2016-06-02 01:05 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(4.48 KB, patch)
2016-06-02 03:00 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(5.70 KB, patch)
2016-06-02 14:01 PDT
,
Per Arne Vollan
achristensen
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-06-02 01:05:10 PDT
Created
attachment 280316
[details]
Patch
Per Arne Vollan
Comment 2
2016-06-02 03:00:05 PDT
Created
attachment 280323
[details]
Patch
Alex Christensen
Comment 3
2016-06-02 13:18:01 PDT
Comment on
attachment 280323
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=280323&action=review
> Source/WebKit/win/WebPreferences.cpp:294 > + CFDictionaryAddValue(defaults, CFSTR(WebKitFetchAPIEnabledPreferenceKey), kCFBooleanTrue);
Fetch isn't done yet. I think it should be disabled by default and turned on in DumpRenderTree.
Per Arne Vollan
Comment 4
2016-06-02 14:01:58 PDT
Created
attachment 280364
[details]
Patch
Per Arne Vollan
Comment 5
2016-06-02 14:04:32 PDT
(In reply to
comment #3
)
> Comment on
attachment 280323
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=280323&action=review
> > > Source/WebKit/win/WebPreferences.cpp:294 > > + CFDictionaryAddValue(defaults, CFSTR(WebKitFetchAPIEnabledPreferenceKey), kCFBooleanTrue); > > Fetch isn't done yet. I think it should be disabled by default and turned > on in DumpRenderTree.
Thanks for reviewing :) Updated patch. It is correct to add the new preference methods to the IWebPreferencesPrivate3 class?
Alex Christensen
Comment 6
2016-06-02 14:18:06 PDT
Comment on
attachment 280364
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=280364&action=review
> Source/WebKit/win/WebView.cpp:5035 > + // TODO: Add preferences for the runtime enabled features.
FIXME seems to be preferred in WebKit.
Alex Christensen
Comment 7
2016-06-02 14:20:08 PDT
(In reply to
comment #5
)
> It is correct to add the new preference methods to the > IWebPreferencesPrivate3 class?
I think so. We add another one after each release to keep the interfaces backwards compatible.
Per Arne Vollan
Comment 8
2016-06-02 21:36:27 PDT
Committed
r201634
: <
https://trac.webkit.org/changeset/201634
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug