[Win] Fetch API tests are failing. https://bugs.webkit.org/show_bug.cgi?id=158296

Reviewed by Alex Christensen.

Source/WebKit/win:

Add preference for enabling Fetch API.

* Interfaces/IWebPreferencesPrivate.idl:
* WebPreferenceKeysPrivate.h:
* WebPreferences.cpp:
(WebPreferences::initializeDefaultSettings):
(WebPreferences::fetchAPIEnabled):
(WebPreferences::setFetchAPIEnabled):
* WebPreferences.h:
* WebView.cpp:
(WebView::notifyPreferencesChanged):

Tools:

Enable Fetch API when running tests.

* DumpRenderTree/win/DumpRenderTree.cpp:
(resetWebPreferencesToConsistentValues):


Canonical link: https://commits.webkit.org/176420@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201634 268f45cc-cd09-0410-ab3c-d52691b4dbfc