Source/WebKit/win/WebPreferenceKeysPrivate.h
@@ -167,3 +167,6 @@
 #define WebKitAllowDisplayAndRunningOfInsecureContentPreferenceKey "WebKitAllowDisplayAndRunningOfInsecureContent"
 
 #define WebKitShowTiledScrollingIndicatorPreferenceKey "WebKitShowTiledScrollingIndicator"
+
+#define WebKitFetchAPIEnabledPreferenceKey "WebKitFetchAPIEnabled"
+
